--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 </head>
 
 <body>
-    <p>美食</p>
+    <p>美食最佳飲品--coffee您的朋友 </p>
+    <P>再怎麼忙，每天總是要與你分享</P>
+    <div>
+        <p>生豆<img src="images/c01.jpg"></p>
+        <p>烘焙豆<img src="images/c02.jpg" alt="烘焙豆"></p>
+    </div>
 </body>
 
 </html>
