--- a/hw1-food.html
+++ b/hw1-food.html
@@ -14,30 +14,24 @@
     <link rel="stylesheet" href="bootstrap-336/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bootstrap-336/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-336/js/bootstrap.min.js">
-    <link rel="stylesheet" href="css/indexcss.css">
-    <title>Tracy Web Site</title>
+    <title></title>
 </head>
 
 <body>
     <div class="nav">
-        <div class="container-fluid">
-            <ul class="pull-left">
+        <div class="container">
+            <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="hw1-food.html">食記1</a></li>
-                <li><a href="freelancer/freelnacer.html">freelancer</a></li>
-            </ul>
-            <ul class="pull-right">
-                <li><a href="#">Log in</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="#">freelancer</a></li>
             </ul>
         </div>
     </div>
+    <p>美食最佳飲品--coffee您的朋友 </p>
+    <P>再怎麼忙，每天總是要與你分享</P>
     <div>
-        <div class="jumbotron">
-            <div class="container">
-                <h1>Hi, I'm Tracy!! </h1>
-            </div>
-        </div>
+        <p>生豆<img src="images/c01.jpg"></p>
+        <p>烘焙豆<img src="images/c02.jpg" alt="烘焙豆"></p>
     </div>
 </body>
 
