--- a/hw1-food.html
+++ b/hw1-food.html
@@ -21,9 +21,9 @@
     <div class="nav">
         <div class="container">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="hw1-food.html">食記1</a></li>
-                <li><a href="#">freelancer</a></li>
+                <li><a href="freelancer/freelnacer.html">freelancer</a></li>
             </ul>
         </div>
     </div>
