--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="nav">
         <div class="container-fluid">
             <ul class="pull-left">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="hw1-food.html">食記1</a></li>
                 <li><a href="freelancer/freelnacer.html">freelancer</a></li>
             </ul>
