--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="nav">
-        <div class="container-fluid">
+        <div class="container-fluid" id="header">
             <ul class="pull-left">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="hw1-food.html">食記1</a></li>
