--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
                 <h1>Hi, I'm Tracy!! </h1>
             </div>
         </div>
+        <div>
+            <ul type="circle">
+                <li>經歷</li>
+                <li>bbbb</li>
+                <li>cccc</li>
+            </ul>
+            <ul type="square">
+                <li>aaaa</li>
+                <li>bbbb</li>
+                <li>cccc</li>
+            </ul>
+        </div>
     </div>
 </body>
 
