--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-fluid" id="header">
             <ul class="pull-left">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="hw1-food.html">食記1</a></li>
+                <li><a href="homework1/hw3-foodcss.html">食記</a></li>
                 <li><a href="freelancer/freelnacer.html">freelancer</a></li>
             </ul>
             <ul class="pull-right">
@@ -40,14 +40,16 @@
         </div>
         <div>
             <ul type="circle">
-                <li>經歷</li>
+                <li>作品</li>
                 <li>bbbb</li>
                 <li>cccc</li>
             </ul>
             <ul type="square">
-                <li>aaaa</li>
+                <li>
+                    <a href="homework1/hw1-food.html">作業一</a>
+                </li>
                 <li>bbbb</li>
-                <li>cccc</li>
+                <li><a href="homework1/hw3_foodcss.html">作業三</a></li>
             </ul>
         </div>
     </div>
