--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <ul class="pull-left">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="homework1/hw3-foodcss.html">食記</a></li>
+                <li><a href="homework1/hw2-resume.html">Resume</a></li>
                 <li><a href="freelancer/freelnacer.html">freelancer</a></li>
             </ul>
             <ul class="pull-right">
@@ -46,10 +47,10 @@
             </ul>
             <ul type="square">
                 <li>
-                    <a href="homework1/hw1-food.html">作業一</a>
+                    <a href="homework1/hw1-food.html">作業一:食記</a>
                 </li>
-                <li>bbbb</li>
-                <li><a href="homework1/hw3_foodcss.html">作業三</a></li>
+                <li>作業二:Resume</li>
+                <li><a href="homework1/hw3-foodcss.html">作業三:食記(css)</a></li>
             </ul>
         </div>
     </div>
