--- a/homework1/hw3-foodcss.html
+++ b/homework1/hw3-foodcss.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="row">
-                <h1>美食最佳飲品</h1>
+                <h1><a href="#section2">美食</a>+<a href="#section1">咖啡</a></h1>
                 <div>
                     <div id="section1">
                         <p>
@@ -44,9 +44,25 @@
                         <p>
                             檸檬酸-檸檬酸常見於檸檬、柑橘一類的水果，口感明亮度高，body感受略降，不影響香氣，這種口感可常見於非洲豆，尤其是衣索比亞的水洗豆，部份中美洲也能感受到。</p>
                         <p><img src="../images/latte.jpg" alt="latte" title="latte" width="300"></p>
-                        <p>
-                            磷酸-咖啡酸質中唯一需要來自土壤，植物無法自行合成的無機酸。磷酸的酸感跟蘋果酸一開始很像，仔細感受一下就會發現，磷酸帶給口中的滋味更柔順舒服，body感受會略降 其實所有的精品咖啡都有酸味，不過這些酸在高溫時又會焦掉，使得越深烘焙的豆子越不酸。 　　酸味帶給咖啡更豐富的內涵，有些略為酸的香味，還可以提神醒腦
-                        </p>
+                    </div>
+                    <div id="section2">
+                        <h2>喝咖啡就是要隨興無菜單</h2>
+                        <p>自製三明治</p>
+                        <ul>
+                            <li>蕃茄</li>
+                            <li>小黃瓜</li>
+                            <li>生菜</li>
+                            <li>麵包</li>
+                        </ul>
+                        <table>
+                            <tr>
+                                <td><img src="../images/tomato.jpg" alt="" width="500px"></td>
+                                <td rowspan=2><img src="../images/sandwich.jpg" alt="sandwich" width="500px"></td>
+                            </tr>
+                            <tr>
+                                <td><img src="../images/vegetable.jpg" width="500px" alt="vegetable"></td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
