--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="pull-left">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="homework1/hw3-foodcss.html">食記</a></li>
-                <li><a href="homework1/hw2-resume.html">Resume</a></li>
+                <li><a href="homework2/resume.html">Resume</a></li>
                 <li><a href="freelancer/freelnacer.html">freelancer</a></li>
             </ul>
             <ul class="pull-right">
@@ -54,6 +54,26 @@
             </ul>
         </div>
     </div>
+    <dir>
+        <p>歡迎~留言</p>
+        <div>
+            <form method="get" action="#">
+                <p>Your name:
+                    <input type="text" name="name" />
+                </p>
+                <p>Your email:
+                    <input type="text" name="email">
+                </p>
+                <p>Your words:
+                    <textarea name="message"></textarea>
+                </p>
+                <input type="submit" value="送出">
+            </form>
+        </div>
+    </dir>
+    <dir id="footer">
+        <p>Tracy's Web &copy;2016</p>
+    </dir>
 </body>
 
 </html>
