--- a/homework1/hw3-foodcss.html
+++ b/homework1/hw3-foodcss.html
@@ -38,7 +38,7 @@
                     <div id="section1">
                         <p>
                             <h2>咖博Coffee -- 您的朋友 !</h2></p>
-                        <p><img src="../images/co03.jpg" alt="烘焙豆" width="300"><img src="../images/co04.jpg" width="300"></p>
+                        <p><img src="../images/co03.jpg" alt="烘焙豆" width="300" title="烘焙豆"><img src="../images/co04.jpg" width="300"></p>
                         <p>進入精品咖啡世界後，味蕾最先感受到的往往是：酸！酸度：是精品咖啡品嘗中最重要的一個項目，通常也最容易被誤解的一個詞彙。精品咖啡的酸度不是酸鹼度中的酸性，也不是進入胃裡讓人不舒服的酸。在沖泡精品咖啡時，酸度的表現是很重要的，在標準沖泡的條件及技巧下，可發展出酸度清爽的特殊口味，是精品咖啡必備的條件。</p>
                         <p><img src="../images/onecup.jpg" alt="咖啡" title="Coffee 您的朋友" width="300"></p>
                         <p>
@@ -48,6 +48,7 @@
                     <div id="section2">
                         <h2>喝咖啡就是要隨興無菜單</h2>
                         <p>自製三明治</p>
+                        <p>材料:</p>
                         <ul>
                             <li>蕃茄</li>
                             <li>小黃瓜</li>
