--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -11,25 +11,23 @@
     <meta name="description" content="description">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.png">
-    <title>Tracy resume</title>
+    <title>resume</title>
 </head>
 
 <body>
+    <h1>Resume</h1>
+    <h6>Tracy</h6>
+    <hr size="5" width="70%" />
     <table cellpadding="2" cellspacing="2" style="border:solid black 3px;" rules="all">
-        <thead>個人介紹</thead>
         <tr>
-            <td>cell1</td>
-            <td colspan="2">pic</td>
+            <td>Description</td>
+            <td>我是程式設計師 從事寫作程式，也負責一些專案
+            </td>
         </tr>
         <tr>
-            <td>I am TRacy</td>
-            <td>是一位程式設計師 </td>
-            <td>從事寫作程式</td>
-        </tr>
-        <tr>
-            <td>我喜歡我的工作,也喜歡我的公司</td>
-            <td>很高興認識大家,和參與這次課程</td>
-            <td>聖經上說:萬事互相効力,叫愛神人的人得益處! </td>
+            <td>experience</td>
+            <td>一直都是從事資訊相關工作！大部開發內部所需資訊系統！我喜歡我的工作,也喜歡我的公司。
+                <td>聖經上說:萬事互相効力,叫愛神人的人得益處! </td>
         </tr>
     </table>
 </body>
