--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -11,25 +11,21 @@
     <meta name="description" content="description">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="stylesheet" href="../css/resume.css">
     <title>resume</title>
 </head>
 
 <body>
-    <h1>Resume</h1>
-    <h6>Tracy</h6>
-    <hr size="5" width="70%" />
-    <table cellpadding="2" cellspacing="2" style="border:solid black 3px;" rules="all">
-        <tr>
-            <td>Description</td>
-            <td>我是程式設計師 從事寫作程式，也負責一些專案
-            </td>
-        </tr>
-        <tr>
-            <td>experience</td>
-            <td>一直都是從事資訊相關工作！大部開發內部所需資訊系統！我喜歡我的工作,也喜歡我的公司。
-                <td>聖經上說:萬事互相効力,叫愛神人的人得益處! </td>
-        </tr>
-    </table>
+    <div class="container">
+        <h1>Resume</h1>
+        <h3>Tracy</h3>
+        <hr size="3" width="100%" />
+        <p><img id="cat" src="../images/cat.jpg" alt="cat"></p>
+        <p><span class="title">Description</span><span class="content">我是程式設計師，從事程式撰寫，平時也會負責一些專案。</span></p>
+        <p><span class="title">Experience</span><span class="content">一直都是從事資訊相關工作！大部開發內部所需資訊系統。喜歡目前的公司和工作。</p>
+        <p><span class="content">聖經上說：萬事互相効力，叫愛神人的人得益處！</p>
+        
+    </div>
 </body>
 
 </html>
