--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="description">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
     <link rel="stylesheet" href="bootstrap-336/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bootstrap-336/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-336/js/bootstrap.min.js">
