--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -21,9 +21,9 @@
         <h3>Tracy</h3>
         <hr size="3" width="100%" />
         <p><img id="cat" src="../images/cat.jpg" alt="cat"></p>
-        <p><span class="title">Description</span><span class="content">我是程式設計師，從事程式撰寫，平時也會負責一些專案。</span></p>
-        <p><span class="title">Experience</span><span class="content">一直都是從事資訊相關工作！大部開發內部所需資訊系統。喜歡目前的公司和工作。</p>
-        <p><span class="content">聖經上說：萬事互相効力，叫愛神人的人得益處！</p>
+        <p><span class="title">Description</span><span class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit ad quasi maxime. Nisi quisquam, sunt nam saepe provident porro eligendi in. Quia dignissimos, laboriosam nostrum veritatis reiciendis earum voluptates est!</span></p>
+        <p><span class="title">Experience</span><span class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fugit veritatis atque libero perspiciatis adipisci aliquid accusantium tempora eius necessitatibus, corporis nihil iure voluptates dicta, corrupti porro aspernatur quos facere.</p>
+        <p><span class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat provident, asperiores nobis voluptates pariatur cumque facilis quo odit facere? Numquam id consequuntur repellendus asperiores alias expedita maxime minus eum, unde.</p>
         
     </div>
 </body>
