--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -18,24 +18,23 @@
 <body>
     <div class="container">
         <h1>Resume</h1>
-        <h3>姓名：Tracy</h3>
+        <h3>姓名：樂樂</h3>
         <hr size="3" width="100%" />
         <div>
-            <p><img id="cat" src="../images/cat.jpg" alt="cat"></p>
+            <p><img id="cat" src="../images/cat.jpg" alt="cat" title="樂樂"></p>
             <p>
-                <ul>
+                <ul type="square">
                     <li>生日 Birthday：</li>
-                    <li>Email：</li>
-                    <li>電話 Tel：</li>
-                    <li>地圵 Addr：</li>
+                    <li>Email：cats@gmail.com</li>
+                    <li>電話 Tel：02-23456789</li>
+                    <li>地圵 Addr：台北市大安區</li>
                 </ul>
             </p>
             <p class="title">學歷 EDUCATION</p>
-            <p class="content"><span>畢業學校 School Name #1</span><span>畢業日期 Graduation month yeaer</span></p>
-            <p class="content"><span>畢業學校 School Name #2</span><span>畢業日期 Graduation month yeaer</span></p>
-            <p class="content"><span>畢業學校 School Name #3</span><span>畢業日期 Graduation month yeaer</span></p>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit ad quasi maxime. Nisi quisquam, sunt nam saepe provident porro eligendi in. Quia dignissimos, laboriosam nostrum veritatis reiciendis earum voluptates est!</p>
-            <p><span class="title">工作經歷 WORK HISTORY</span></p>
+            <p class="content"><span>AAA學校 School A </span><span>畢業日期 Graduation month yeaer</span></p>
+            <p class="content"><span>BBB學校 School B </span><span>畢業日期 Graduation month yeaer</span></p>
+            <p class="content"><span>CCC學校 School C </span><span>畢業日期 Graduation month yeaer</span></p>
+            <p class="title">工作經歷 WORK HISTORY</p>
             <P>
                 <ul>
                     <li>公司名comanyA:職稱Title 日期
@@ -46,16 +45,16 @@
                         <br>內容Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
                 </ul>
             </p>
-            <p><span class="title">語言能力 LANGUAGES</span></p>
+            <p class="title">語言能力 LANGUAGES</p>
             <P>
                 <ul>
                     <li>CHINIES</li>
                     <li>ENGLISH</li>
                 </ul>
             </p>
-            <p><span class="title">電腦技能 computer skill</span></p>
+            <p class="title">電腦技能 computer skill</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio libero vero ipsam, minus architecto, ullam id quo explicabo deleniti esse accusantium maiores. Dignissimos, quis error ad odit nostrum! Repudiandae, dignissimos.</p>
-            <p><span class="title">興趣 INTERESTS</span></p>
+            <p class="title">興趣 INTERESTS</p>
             <p><span class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat provident, asperiores nobis voluptates pariatur cumque facilis quo odit facere? Numquam id consequuntur repellendus asperiores alias expedita maxime minus eum, unde.</p>
         
     </div>
