--- a/homework1/hw3-foodcss.html
+++ b/homework1/hw3-foodcss.html
@@ -25,6 +25,7 @@
                 <ul class="pull-left">
                     <li><a href="../index.html">首頁</a></li>
                     <li><a href="hw1-food.html">食記</a></li>
+                    <li><a href="../homework2/resume.html">Resume</a></li>
                     <li><a href="../freelancer/freelnacer.html">freelancer</a></li>
                 </ul>
                 <ul class="pull-right">
