--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="pull-left">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="homework1/hw3-foodcss.html">食記</a></li>
-                <li><a href="../homework2/resume.html">Resume</a></li>
+                <li><a href="homework2/resume.html">Resume</a></li>
                 <li><a href="freelancer/freelnacer.html">freelancer</a></li>
             </ul>
             <ul class="pull-right">
