--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -31,20 +31,24 @@
                 </ul>
             </p>
             <p class="title">學歷 EDUCATION</p>
-            <p class="content"><span>AAA學校 School A </span><span>畢業日期 Graduation month yeaer</span></p>
-            <p class="content"><span>BBB學校 School B </span><span>畢業日期 Graduation month yeaer</span></p>
-            <p class="content"><span>CCC學校 School C </span><span>畢業日期 Graduation month yeaer</span></p>
+            <p><span>AAA學校 School A </span><span>畢業日期 Graduation month yeaer</span></p>
+            <p><span>BBB學校 School B </span><span>畢業日期 Graduation month yeaer</span></p>
+            <p><span>CCC學校 School C </span><span>畢業日期 Graduation month yeaer</span></p>
             <p class="title">工作經歷 WORK HISTORY</p>
-            <P>
+            <div>
                 <ul>
-                    <li>公司名comanyA:職稱Title 日期
-                        <br>內容Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                    <li>公司名comanyA:職稱Title 日期
-                        <br>內容Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                    <li>公司名comanyA:職稱Title 日期
-                        <br>內容Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                    <li>
+                        <p class="comp"><span>公司名comanyA</span>
+                            <span>職稱 Title</span><span>日期</span></p>
+                        <p>內容Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </li>
+                    <li>
+                        <p class="comp"><span>公司名comanyB</span>
+                            <span>職稱 Title</span><span>日期</span></p>
+                        <p>內容Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </li>
                 </ul>
-            </p>
+            </div>
             <p class="title">語言能力 LANGUAGES</p>
             <P>
                 <ul>
@@ -53,12 +57,12 @@
                 </ul>
             </p>
             <p class="title">電腦技能 computer skill</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio libero vero ipsam, minus architecto, ullam id quo explicabo deleniti esse accusantium maiores. Dignissimos, quis error ad odit nostrum! Repudiandae, dignissimos.</p>
+            <p class="contint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio libero vero ipsam, minus architecto, ullam id quo explicabo deleniti esse accusantium maiores. Dignissimos, quis error ad odit nostrum! Repudiandae, dignissimos.</p>
             <p class="title">興趣 INTERESTS</p>
-            <p><span class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat provident, asperiores nobis voluptates pariatur cumque facilis quo odit facere? Numquam id consequuntur repellendus asperiores alias expedita maxime minus eum, unde.</p>
-        
+            <p class="contint">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat provident, asperiores nobis voluptates pariatur cumque facilis quo odit facere? Numquam id consequuntur repellendus asperiores alias expedita maxime minus eum, unde.</p>
+        </div>
+        <hr size="3" width="100%" />
     </div>
-    <hr size="3" width="100%" />
 </body>
 
 </html>
