--- a/homework1/hw3-foodcss.html
+++ b/homework1/hw3-foodcss.html
@@ -11,6 +11,7 @@
     <meta name="description" content="description">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
     <link rel="stylesheet" href="../bootstrap-336/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../bootstrap-336/css/bootstrap.min.css">
     <link rel="stylesheet" href="../bootstrap-336/js/bootstrap.min.js">
@@ -33,39 +34,38 @@
                     <li><a href="#">Help</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="container">
             <div class="row">
                 <h1><a href="#section2">美食</a>+<a href="#section1">咖啡</a></h1>
-                <div>
-                    <div id="section1">
-                        <p>
-                            <h2>咖博Coffee -- 您的朋友 !</h2></p>
-                        <p><img src="../images/co03.jpg" alt="烘焙豆" width="300" title="烘焙豆"><img src="../images/co04.jpg" width="300"></p>
-                        <p>進入精品咖啡世界後，味蕾最先感受到的往往是：酸！酸度：是精品咖啡品嘗中最重要的一個項目，通常也最容易被誤解的一個詞彙。精品咖啡的酸度不是酸鹼度中的酸性，也不是進入胃裡讓人不舒服的酸。在沖泡精品咖啡時，酸度的表現是很重要的，在標準沖泡的條件及技巧下，可發展出酸度清爽的特殊口味，是精品咖啡必備的條件。</p>
-                        <p><img src="../images/onecup.jpg" alt="咖啡" title="Coffee 您的朋友" width="300"></p>
-                        <p>
-                            檸檬酸-檸檬酸常見於檸檬、柑橘一類的水果，口感明亮度高，body感受略降，不影響香氣，這種口感可常見於非洲豆，尤其是衣索比亞的水洗豆，部份中美洲也能感受到。</p>
-                        <p><img src="../images/latte.jpg" alt="latte" title="latte" width="300"></p>
-                    </div>
-                    <div id="section2">
-                        <h2>喝咖啡就是要隨興無菜單</h2>
-                        <p>自製三明治</p>
-                        <p>材料:</p>
-                        <ul>
-                            <li>蕃茄</li>
-                            <li>小黃瓜</li>
-                            <li>生菜</li>
-                            <li>麵包</li>
-                        </ul>
-                        <table>
-                            <tr>
-                                <td><img src="../images/tomato.jpg" alt="" width="500px"></td>
-                                <td rowspan=2><img src="../images/sandwich.jpg" alt="sandwich" width="500px"></td>
-                            </tr>
-                            <tr>
-                                <td><img src="../images/vegetable.jpg" width="500px" alt="vegetable"></td>
-                            </tr>
-                        </table>
-                    </div>
+                <div id="section1">
+                    <h2>咖博Coffee -- 您的朋友 !</h2>
+                    <p><img src="../images/co03.jpg" alt="烘焙豆" width="320" title="烘焙豆"><img src="../images/co04.jpg" width="320"></p>
+                    <p>進入精品咖啡世界後，味蕾最先感受到的往往是：酸！酸度：是精品咖啡品嘗中最重要的一個項目，通常也最容易被誤解的一個詞彙。精品咖啡的酸度不是酸鹼度中的酸性，也不是進入胃裡讓人不舒服的酸。在沖泡精品咖啡時，酸度的表現是很重要的，在標準沖泡的條件及技巧下，可發展出酸度清爽的特殊口味，是精品咖啡必備的條件。</p>
+                    <p><img src="../images/onecup.jpg" alt="咖啡" title="Coffee 您的朋友" width="300"></p>
+                    <p>
+                        檸檬酸-檸檬酸常見於檸檬、柑橘一類的水果，口感明亮度高，body感受略降，不影響香氣，這種口感可常見於非洲豆，尤其是衣索比亞的水洗豆，部份中美洲也能感受到。</p>
+                    <p><img src="../images/latte.jpg" alt="latte" title="latte" width="300"></p>
+                </div>
+                <div id="section2">
+                    <h2>喝咖啡就是要隨興無菜單</h2>
+                    <p>自製三明治</p>
+                    <p>材料:</p>
+                    <ul>
+                        <li>蕃茄</li>
+                        <li>小黃瓜</li>
+                        <li>生菜</li>
+                        <li>麵包</li>
+                    </ul>
+                    <table>
+                        <tr>
+                            <td><img src="../images/tomato.jpg" alt="" width="500px"></td>
+                            <td rowspan=2><img src="../images/sandwich.jpg" alt="sandwich" width="500px"></td>
+                        </tr>
+                        <tr>
+                            <td><img src="../images/vegetable.jpg" width="500px" alt="vegetable"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
