--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li>
                     <a href="homework1/hw1-food.html">作業一:食記</a>
                 </li>
-                <li>作業二:Resume</li>
+                <li><a href="homework2/resume.html">作業二:Resume</a></li>
                 <li><a href="homework1/hw3-foodcss.html">作業三:食記(css)</a></li>
             </ul>
         </div>
