--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -18,8 +18,17 @@
 <body>
     <div class="container">
         <h1>Resume</h1>
-        <h3>姓名：樂樂</h3>
-        <hr size="3" width="100%" />
+        <div>
+            <div class="topmenu">
+                <ul id="ulstyle">
+                    <li><a href="../index.html">作品集 Home：</a></li>
+                    <li>
+                        <a href="../homework1/hw3-foodcss.html">食記</a></li>
+                </ul>
+            </div>
+            <h3>姓名：樂樂</h3>
+            <hr size="3" width="100%" />
+        </div>
         <div>
             <p><img id="cat" src="../images/cat.jpg" alt="cat" title="樂樂"></p>
             <p>
