--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -33,7 +33,7 @@
             <p><img id="cat" src="../images/cat.jpg" alt="cat" title="樂樂"></p>
             <p>
                 <ul type="square">
-                    <li>生日 Birthday：</li>
+                    <li>生日 Birthday：1年OO月</li>
                     <li>Email：cats@gmail.com</li>
                     <li>電話 Tel：02-23456789</li>
                     <li>地圵 Addr：台北市大安區</li>
