--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="freelancer/freelnacer.html">freelancer</a></li>
             </ul>
             <ul class="pull-right">
-                <li><a href="#">Log in</a></li>
+                <li><a href="#">Contact</a></li>
                 <li><a href="#message">Help</a></li>
             </ul>
         </div>
@@ -38,41 +38,59 @@
     <div class="jumbotron">
         <div class="container">
             <h1>Hello，你好! </h1>
-            <p>Welcom to my website.</p>
+            <p>Welcom to my website.
+                <a class="btn btn-default" href="readme.html">Readme</a>
+            </p>
         </div>
     </div>
     <div class="homeworks">
         <div class="container">
             <h2>作業集</h2>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4" id="hw1">作業一：食記</div>
-                <div class="col-xs-12 col-sm-6 col-md-4" id="hw2">作業二：Resume</div>
+                <div class="col-xs-12 col-sm-6 col-md-4" id="hw1">
+                    <div class="thumbnail">
+                        <a href="homework1/hw3-foodcss.html"> <img src="images/foodicon.jpg" alt="作業一：食記" title="食記"></a>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4" id="hw2">
+                    <div class="thumbnail"><img src="images/resumeicon2.jpg" width="335"></div>
+                </div>
                 <div class="col-xs-12 col-sm-6 col-md-4" id="hw3">作業三：食記css</div>
             </div>
-            <!--
-            <div class="msg">
+            <div class="read-more">
                 <div class="container">
-                    <p>歡迎~留言</p>
                     <div class="row">
-                        <form id="message" method="get" action="#">
-                            <p>
-                                <label for="fname">Your Name</label>
-                                <input type="text" name="name" />
-                            </p>
-                            <p>
-                                <label for="femail">Your Email</label>
-                                <input type="text" name="email">
-                            </p>
-                            <p>
-                                <label for="fmsg">Your words:</label>
-                                <textarea name="message"></textarea>
-                            </p>
-                            <input type="submit" value="送出">
-                        </form>
+                        <div class="col-xs-12 col-md-4">
+                            <h3>咖啡</h3>
+                            <p>咖啡是採用經過烘焙過程的咖啡豆（咖啡屬植物的種子）所製作沖泡出來的飲料。咖啡是人類社會流行範圍最為廣泛的飲料之一，也是重要經濟作物，其為全球期貨貿易額度第二高（最高為石油）。咖啡普遍分為兩種：備受推崇的小果咖啡（阿拉比卡）及顆粒較粗和酸味較低而苦味較濃的中果咖啡（羅布斯塔）。咖啡一旦成熟，就會經過採摘，加工，烘焙的程序。咖啡是微酸性的，其咖啡因的含量對人體有刺激的作用。咖啡是世界上最流行的飲料之一，它能夠以多種方式製作，如：濃縮咖啡、卡布奇諾、拿鐵咖啡...等，通常是作為熱飲，亦也可作為冷飲。大部分的研究建議，適度飲用咖啡是有益的，甚或有利於健康的成年人。</p>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <h3>折耳貓</h3>
+                            <p> 蘇格蘭摺耳貓是一種耳朵有基因突變的貓。這種貓在軟骨部份有一個摺，使耳朵向前屈摺，並指向頭的前方。由於這貓種最初在蘇格蘭發現，所以以牠的發現地和身體特徵而命名。其後，這貓種在美國繼續繁殖，並演生成為今日的多個品種。折耳貓本身其實是遺傳上的病 ...因為這本身是遺傳病，所以商人為了維持"折耳"就幾乎都是近親交配 ,當然生出來的貓咪身體健康就大打折扣了... 生病機率也會比一般貓咪高 ... 所以真的要養的話，就要比一般人更用心照顧了 ...不過還是建議以領養代替購買啦</p>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <h3>歡迎~留言</h3>
+                            <div class="msg">
+                                <form id="message" method="get" action="#">
+                                    <p>
+                                        <label for="fname">Your Name</label>
+                                        <input type="text" name="name" />
+                                    </p>
+                                    <p>
+                                        <label for="femail">Your Email</label>
+                                        <input type="text" name="email">
+                                    </p>
+                                    <p>
+                                        <label for="fmsg">Your words:</label>
+                                        <textarea name="message"></textarea>
+                                    </p>
+                                    <input type="submit" value="送出">
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            -->
         </div>
     </div>
     <div class="row">
