--- a/homework1/hw3-foodcss.html
+++ b/homework1/hw3-foodcss.html
@@ -40,7 +40,11 @@
                 <h1><a href="#section2">美食</a>+<a href="#section1">咖啡</a></h1>
                 <div id="section1">
                     <h2>咖博 Kabod Coffee -- 您的朋友 !</h2>
-                    <!--<p><img src="../images/co03.jpg" alt="烘焙豆" width="320" title="烘焙豆"><img src="../images/co04.jpg" width="320"></p>-->
+                    <!--
+                    <div id="block2">
+                        <p><img src="../images/orgcoffee.jpg" alt="豆" width="350" title="豆"></p>
+                        <p><img src="../images/bakecoffee.jpg" width="350"></p>
+                    </div>-->
                     <p> <img src="../images/c02.jpg" alt=""></p>
                     <p>進入精品咖啡世界後，味蕾最先感受到的往往是：酸！酸度：是精品咖啡品嘗中最重要的一個項目，通常也最容易被誤解的一個詞彙。精品咖啡的酸度不是酸鹼度中的酸性，也不是進入胃裡讓人不舒服的酸。在沖泡精品咖啡時，酸度的表現是很重要的，在標準沖泡的條件及技巧下，可發展出酸度清爽的特殊口味，是精品咖啡必備的條件。</p>
                     <p>什麼是好咖啡？法國人喜歡喝加牛奶的咖啡，而意大利人則喜歡加糖的蒸氣加壓式咖啡，喝咖啡並沒有特定那種方法最好喝，只要是選擇自已喜歡的咖啡，就是一杯好咖啡。若是想吕嚐對苦　酸　甜味均衡的咖啡，喝黑咖啡是最能了解咖啡原味的品嚐方式。</p>
