--- a/readme.html
+++ b/readme.html
@@ -11,13 +11,14 @@
     <meta name="description" content="description">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
     <link rel="stylesheet" href="css/readme.css">
     <title> Readme</title>
 </head>
 
 <body>
     <div class="container">
-        <div id="poem19">
+        <div class="poem19">
             <p>諸天述說上帝的榮耀；</p>
             <p>穹蒼傳揚他的手段。</p>
             <p>這日到那日發出言語；</p>
