--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="homework2/resume.html"><img src="images/resumeicon2.jpg" width="335" alt="作業二：Resume" title="Resume"></a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4" id="hw3">作業三：食記css</div>
+                <div class="col-xs-12 col-sm-6 col-md-4" id="hw3">作業五：CSS float</div>
             </div>
             <div class="read-more">
                 <div class="container">
