--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#">架構草圖</a></li>
                 <li><a href="homework1/hw3-foodcss.html">食記</a></li>
                 <li><a href="homework2/resume.html">Resume</a></li>
-                <li><a href="freelancer/freelnacer.html">freelancer</a></li>
+                <li><a href="homework5/threecol.html">CSS float</a></li>
             </ul>
             <ul class="pull-right">
                 <li><a href="mailto:tracy@llc.org.tw"><span class="glyphicon glyphicon-envelope"></span>Contact</a></li>
@@ -55,7 +55,8 @@
                         <a href="homework2/resume.html"><img src="images/resumeicon2.jpg" width="335" alt="作業二：Resume" title="Resume"></a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4" id="hw3">作業五：CSS float</div>
+                <div class="col-xs-12 col-sm-6 col-md-4" id="hw3">
+                    <a href="homework5/threecol.html">作業五：CSS float</a></div>
             </div>
             <div class="read-more">
                 <div class="container">
