--- a/homework2/resume.html
+++ b/homework2/resume.html
@@ -24,6 +24,7 @@
                     <li><a href="../index.html">作品集 Home：</a></li>
                     <li>
                         <a href="../homework1/hw3-foodcss.html">食記</a></li>
+                        <li><a href="../homework5/threecol.html">CSS float</a></li>
                 </ul>
             </div>
             <h3>姓名：樂樂</h3>
