--- a/homework1/hw3-foodcss.html
+++ b/homework1/hw3-foodcss.html
@@ -27,7 +27,7 @@
                     <li><a href="../index.html">首頁</a></li>
                     <li><a href="hw3-foodcss.html">食記</a></li>
                     <li><a href="../homework2/resume.html">Resume</a></li>
-                    <li><a href="../freelancer/freelnacer.html">freelancer</a></li>
+                    <li><a href="../homework5/threecol.html">CSS float</a></li>
                 </ul>
                 <ul class="pull-right">
                     <li><a href="#">Contact</a></li>
