--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-fluid" id="header">
             <ul class="pull-left">
                 <li><a href="index.html"><span class="glyphicon glyphicon-home"></span>Home</a></li>
-                <li><a href="#">架構草圖</a></li>
+                <li><a href="images/webframe.gif" target="_blank">架構草圖</a></li>
                 <li><a href="homework1/hw3-foodcss.html">食記</a></li>
                 <li><a href="homework2/resume.html">Resume</a></li>
                 <li><a href="homework5/threecol.html">CSS float</a></li>
@@ -47,16 +47,19 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4" id="hw1">
                     <div class="thumbnail">
-                        <a href="homework1/hw3-foodcss.html"> <img src="images/foodicon.jpg" alt="作業一：食記" title="食記"></a>
+                        <a href="homework1/hw3-foodcss.html"> <img src="images/foodicon3.jpg" width="250" alt="作業一：食記" title="食記"></a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4" id="hw2">
                     <div class="thumbnail">
-                        <a href="homework2/resume.html"><img src="images/resumeicon2.jpg" width="335" alt="作業二：Resume" title="Resume"></a>
+                        <a href="homework2/resume.html"><img src="images/resumeicon3.jpg" width="300" alt="作業二：Resume" title="Resume"></a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4" id="hw3">
-                    <a href="homework5/threecol.html">作業五：CSS float</a></div>
+                    <div class="thumbnail">
+                        <a href="homework5/threecol.html"><img src="images/hw5v3.jpg" alt="作業五：CSS float"></a>
+                    </div>
+                </div>
             </div>
             <div class="read-more">
                 <div class="container">
