--- a/homework5/rwd.html
+++ b/homework5/rwd.html
@@ -11,10 +11,23 @@
     <meta name="description" content="description">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="stylesheet" href="../css/rwd.css">
     <title>RWD</title>
 </head>
 
+
 <body>
+<div class="row">
+    <div class="col-1">
+        <h1>col-1</h1>
+    </div>
+    <div class="col-2">
+        <h1>col-2</h1>
+    </div>
+</div>
+<div class="row">
+    <h1>row2</h1>
+</div>
 </body>
 
 </html>
